# rpividctrl

./: README.md  common.py  config.json  overlay.py  rpividctrl_client.py  rpividctrl_server.py
debug/: client.sh  on_server.sh  plot.sh  server.sh
overlays/: test_lines_overlay.py
rpividctrl_lib/: constants.py  messaging.py
server_cpp/: CMakeLists.txt  Message.cpp  Message.h  SocketManager.cpp  SocketManager.h  main.cpp
